--- a/nbs/01_nbio.ipynb
+++ b/nbs/01_nbio.ipynb
@@ -26,13 +26,12 @@
    "outputs": [],
    "source": [
     "#|export\n",
-    "from fastcore.imports import *\n",
-    "from fastcore.foundation import *\n",
     "from fastcore.basics import *\n",
-    "from fastcore.xtras import *\n",
+    "from fastcore.imports import *\n",
     "\n",
     "import ast,functools\n",
-    "from pprint import pformat,pprint"
+    "from pprint import pformat,pprint\n",
+    "from json import loads,dumps"
    ]
   },
   {
@@ -65,8 +64,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#|exports\n",
+    "def _read_json(self, encoding=None, errors=None):\n",
+    "    return loads(Path(self).read_text(encoding=encoding, errors=errors))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "minimal_fn = Path('../tests/minimal.ipynb')\n",
-    "minimal_txt = AttrDict(minimal_fn.read_json())"
+    "minimal_txt = AttrDict(_read_json(minimal_fn))"
    ]
   },
   {
@@ -163,7 +173,9 @@
     "        if self.cell_type!='code' or self.source.strip()[:1] in ['%', '!']: return\n",
     "        if '_parsed_' not in self: \n",
     "            try: self._parsed_ = ast.parse(self.source).body\n",
-    "            except SyntaxError: return # you can assign the result of ! to a variable in a notebook cell, which will result in a syntax error if parsed with the ast module.\n",
+    "            # you can assign the result of ! to a variable in a notebook cell\n",
+    "            # which will result in a syntax error if parsed with the ast module.\n",
+    "            except SyntaxError: return\n",
     "        return self._parsed_\n",
     "\n",
     "    def __hash__(self): return hash(self.source) + hash(self.cell_type)\n",
@@ -184,10 +196,16 @@
    "outputs": [],
    "source": [
     "#|export\n",
+    "def _dict2obj(d, list_func=list, dict_func=AttrDict):\n",
+    "    \"Convert (possibly nested) dicts (or lists of dicts) to `AttrDict`\"\n",
+    "    if isinstance(d, list): return list(map(_dict2obj, d))\n",
+    "    if not isinstance(d, dict): return d\n",
+    "    return dict_func(**{k:_dict2obj(v) for k,v in d.items()})\n",
+    "\n",
     "def dict2nb(js=None, **kwargs):\n",
     "    \"Convert dict `js` to an `AttrDict`, \"\n",
-    "    nb = dict2obj(js or kwargs)\n",
-    "    nb.cells = nb.cells.enumerate().starmap(NbCell)\n",
+    "    nb = _dict2obj(js or kwargs)\n",
+    "    nb.cells = [NbCell(*o) for o in enumerate(nb.cells)]\n",
     "    return nb"
    ]
   },
@@ -211,7 +229,10 @@
        "  'execution_count': None,\n",
        "  'idx_': 1,\n",
        "  'metadata': {},\n",
-       "  'outputs': [{'data': {'text/plain': ['2']}, 'execution_count': None, 'metadata': {}, 'output_type': 'execute_result'}],\n",
+       "  'outputs': [ { 'data': {'text/plain': ['2']},\n",
+       "                 'execution_count': None,\n",
+       "                 'metadata': {},\n",
+       "                 'output_type': 'execute_result'}],\n",
        "  'source': '# Do some arithmetic\\n1+1'}\n",
        "```"
       ],
@@ -219,7 +240,10 @@
        "{'cell_type': 'code',\n",
        " 'execution_count': None,\n",
        " 'metadata': {},\n",
-       " 'outputs': (#1) [{'data': {'text/plain': ['2']}, 'execution_count': None, 'metadata': {}, 'output_type': 'execute_result'}],\n",
+       " 'outputs': [{'data': {'text/plain': ['2']},\n",
+       "   'execution_count': None,\n",
+       "   'metadata': {},\n",
+       "   'output_type': 'execute_result'}],\n",
        " 'source': '# Do some arithmetic\\n1+1',\n",
        " 'idx_': 1}"
       ]
@@ -250,7 +274,7 @@
     {
      "data": {
       "text/plain": [
-       "([<ast.Expr at 0x1067c36a0>], <ast.Add at 0x1039bb2e0>)"
+       "([<ast.Expr at 0x10b2287f0>], <ast.Add at 0x10564b2e0>)"
       ]
      },
      "execution_count": null,
@@ -271,7 +295,7 @@
     "#|export\n",
     "def read_nb(path):\n",
     "    \"Return notebook at `path`\"\n",
-    "    res = dict2nb(Path(path).read_json(encoding='utf-8'))\n",
+    "    res = dict2nb(_read_json(path, encoding='utf-8'))\n",
     "    res['path_'] = str(path)\n",
     "    return res"
    ]
@@ -335,7 +359,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating a notebook"
+    "## Creating a notebook"
    ]
   },
   {
@@ -425,7 +449,7 @@
     "def nb2dict(d, k=None):\n",
     "    \"Convert parsed notebook to `dict`\"\n",
     "    if k=='source': return d.splitlines(keepends=True)\n",
-    "    if isinstance(d, (L,list)): return list(L(d).map(nb2dict))\n",
+    "    if isinstance(d, list): return list(map(nb2dict,d))\n",
     "    if not isinstance(d, dict): return d\n",
     "    return dict(**{k:nb2dict(v,k) for k,v in d.items() if k[-1] != '_'})"
    ]
@@ -446,7 +470,7 @@
     "minimal_fn = Path('../tests/minimal.ipynb')\n",
     "minimal = read_nb(minimal_fn)\n",
     "\n",
-    "minimal_dict = minimal_fn.read_json()\n",
+    "minimal_dict = _read_json(minimal_fn)\n",
     "assert minimal_dict==nb2dict(minimal)"
    ]
   },
@@ -459,7 +483,7 @@
     "#|export\n",
     "def nb2str(nb):\n",
     "    \"Convert `nb` to a `str`\"\n",
-    "    if isinstance(nb, (AttrDict,L)): nb = nb2dict(nb)\n",
+    "    if isinstance(nb, (AttrDict,list)): nb = nb2dict(nb)\n",
     "    return dumps(nb, sort_keys=True, indent=1, ensure_ascii=False) + \"\\n\""
    ]
   },
@@ -499,7 +523,7 @@
     "#|export\n",
     "def write_nb(nb, path):\n",
     "    \"Write `nb` to `path`\"\n",
-    "    with maybe_open(path, 'w', encoding='utf-8') as f: f.write(nb2str(nb))"
+    "    with open(path, 'w', encoding='utf-8') as f: f.write(nb2str(nb))"
    ]
   },
   {
