--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -266,8 +266,8 @@
       "text/plain": [
        "[{'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
-       "  'text': ['CPU times: user 1 us, sys: 0 ns, total: 1 us\\n',\n",
-       "   'Wall time: 3.1 us\\n']},\n",
+       "  'text': ['CPU times: user 1e+03 ns, sys: 0 ns, total: 1e+03 ns\\n',\n",
+       "   'Wall time: 1.91 us\\n']},\n",
        " {'data': {'text/plain': ['2']},\n",
        "  'metadata': {},\n",
        "  'output_type': 'execute_result',\n",
@@ -430,7 +430,7 @@
        " 'execution_count': None,\n",
        " 'id': 'b123d6d0',\n",
        " 'metadata': {},\n",
-       " 'outputs': (#0) [],\n",
+       " 'outputs': [],\n",
        " 'source': 'print(1)\\n2',\n",
        " 'idx_': 1}"
       ]
@@ -514,7 +514,7 @@
     {
      "data": {
       "text/plain": [
-       "(#0) []"
+       "[]"
       ]
      },
      "execution_count": null,
@@ -661,7 +661,7 @@
     {
      "data": {
       "text/plain": [
-       "(#0) []"
+       "[]"
       ]
      },
      "execution_count": null,
@@ -1018,7 +1018,7 @@
        "  'execution_count': None,\n",
        "  'id': 'a63ce885',\n",
        "  'metadata': {},\n",
-       "  'outputs': (#0) [],\n",
+       "  'outputs': [],\n",
        "  'source': 'a=2',\n",
        "  'idx_': 0},\n",
        " {'cell_type': 'code',\n",
@@ -1097,9 +1097,7 @@
    "outputs": [],
    "source": [
     "#|hide\n",
-    "#|eval: false\n",
-    "from nbdev.doclinks import nbdev_export\n",
-    "nbdev_export()"
+    "import nbdev; nbdev.nbdev_export()"
    ]
   },
   {
