Revert "fix: source can be a list"
This reverts commit ab35f7ef691acf203bef0ae368c404ddbb23cf08.

--- a/nbs/01_nbio.ipynb
+++ b/nbs/01_nbio.ipynb
@@ -274,7 +274,7 @@
     {
      "data": {
       "text/plain": [
-       "([<ast.Expr>], <ast.Add>)"
+       "([<ast.Expr at 0x10b2287f0>], <ast.Add at 0x10564b2e0>)"
       ]
      },
      "execution_count": null,
@@ -448,7 +448,7 @@
     "#|export\n",
     "def nb2dict(d, k=None):\n",
     "    \"Convert parsed notebook to `dict`\"\n",
-    "    if k=='source': return d.splitlines(keepends=True) if isinstance(d, str) else d\n",
+    "    if k=='source': return d.splitlines(keepends=True)\n",
     "    if isinstance(d, list): return list(map(nb2dict,d))\n",
     "    if not isinstance(d, dict): return d\n",
     "    return dict(**{k:nb2dict(v,k) for k,v in d.items() if k[-1] != '_'})"
