--- a/nbs/01_nbio.ipynb
+++ b/nbs/01_nbio.ipynb
@@ -274,7 +274,7 @@
     {
      "data": {
       "text/plain": [
-       "([<ast.Expr at 0x10b2287f0>], <ast.Add at 0x10564b2e0>)"
+       "([<ast.Expr>], <ast.Add>)"
       ]
      },
      "execution_count": null,
@@ -436,6 +436,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Notebook Base Class\n",
+    "\n",
+    "You may want to create your own Classes to encapsulate notebooks.  We provide `BaseNB` that offers compatibility with this library for convenience."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
+    "class BaseNB:\n",
+    "    \"Base Class for Notebooks.\"\n",
+    "    def __init__(self,\n",
+    "                 nb # an AttrDict or Path to a notebook\n",
+    "                ):\n",
+    "        if isinstance(nb, BaseNB): self.nb = nb.nb\n",
+    "        elif isinstance(nb, (str, Path)): self.nb = read_nb(nb)\n",
+    "        else: self.nb=nb\n",
+    "        \n",
+    "    def __getattr__(self, k): return getattr(self.nb, k)\n",
+    "    def __getitem__(self, k): return getattr(self, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|hide\n",
+    "_p = '../tests/minimal.ipynb'\n",
+    "assert BaseNB(_p).nb == read_nb(_p)\n",
+    "assert BaseNB(_p).cells == read_nb(_p).cells"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Writing a notebook"
    ]
   },
@@ -484,6 +525,7 @@
     "def nb2str(nb):\n",
     "    \"Convert `nb` to a `str`\"\n",
     "    if isinstance(nb, (AttrDict,list)): nb = nb2dict(nb)\n",
+    "    if isinstance(nb, BaseNB): nb = nb2dict(nb.nb)\n",
     "    return dumps(nb, sort_keys=True, indent=1, ensure_ascii=False) + \"\\n\""
    ]
   },
@@ -544,6 +586,21 @@
     "    minimal_txt = minimal_fn.read_text()\n",
     "    write_nb(minimal, tmp)\n",
     "    assert minimal_txt==tmp.read_text()\n",
+    "finally: tmp.unlink()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|hide\n",
+    "# Tests the BaseNB class\n",
+    "tmp = Path('tmp.ipynb')\n",
+    "try:\n",
+    "    write_nb(BaseNB(minimal_fn), tmp)\n",
+    "    assert minimal_fn.read_text()==tmp.read_text()\n",
     "finally: tmp.unlink()"
    ]
   },
