refactor to make Base minimal

--- a/nbs/01_nbio.ipynb
+++ b/nbs/01_nbio.ipynb
@@ -450,13 +450,7 @@
     "#|export\n",
     "class BaseNB:\n",
     "    \"Base Class for Notebooks.\"\n",
-    "    def __init__(self,\n",
-    "                 nb # an AttrDict or Path to a notebook\n",
-    "                ):\n",
-    "        if isinstance(nb, BaseNB): self.nb = nb.nb\n",
-    "        elif isinstance(nb, (str, Path)): self.nb = read_nb(nb)\n",
-    "        else: self.nb=nb\n",
-    "        \n",
+    "    def __init__(self, nb): self.nb=nb\n",
     "    def __getattr__(self, k): return getattr(self.nb, k)\n",
     "    def __getitem__(self, k): return getattr(self, k)"
    ]
@@ -469,8 +463,8 @@
    "source": [
     "#|hide\n",
     "_p = '../tests/minimal.ipynb'\n",
-    "assert BaseNB(_p).nb == read_nb(_p)\n",
-    "assert BaseNB(_p).cells == read_nb(_p).cells"
+    "assert BaseNB(read_nb(_p)).nb == read_nb(_p)\n",
+    "assert BaseNB(read_nb(_p)).cells == read_nb(_p).cells"
    ]
   },
   {
@@ -599,7 +593,7 @@
     "# Tests the BaseNB class\n",
     "tmp = Path('tmp.ipynb')\n",
     "try:\n",
-    "    write_nb(BaseNB(minimal_fn), tmp)\n",
+    "    write_nb(BaseNB(minimal), tmp)\n",
     "    assert minimal_fn.read_text()==tmp.read_text()\n",
     "finally: tmp.unlink()"
    ]
