--- a/nbs/01_nbio.ipynb
+++ b/nbs/01_nbio.ipynb
@@ -523,7 +523,11 @@
     "#|export\n",
     "def write_nb(nb, path):\n",
     "    \"Write `nb` to `path`\"\n",
-    "    with open(path, 'w', encoding='utf-8') as f: f.write(nb2str(nb))"
+    "    new = nb2str(nb)\n",
+    "    path = Path(path)\n",
+    "    old = Path(path).read_text() if path.exists() else None\n",
+    "    if new!=old:\n",
+    "        with open(path, 'w', encoding='utf-8') as f: f.write(new)"
    ]
   },
   {
@@ -590,8 +594,7 @@
    "outputs": [],
    "source": [
     "#|hide\n",
-    "from nbdev import nbdev_export\n",
-    "nbdev_export()"
+    "import nbdev; nbdev.nbdev_export()"
    ]
   },
   {
