--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -161,7 +161,7 @@
     "        \"Add `path` to python path, or `path.parent` if it's a file\"\n",
     "        path = Path(path)\n",
     "        if path.is_file(): path = path.parent\n",
-    "        self.run_cell(f\"import sys; sys.path.insert(0, '{path}')\")\n",
+    "        self.run_cell(f\"import sys; sys.path.insert(0, '{path.as_posix()}')\")\n",
     "\n",
     "    def enable_gui(self, gui=None):\n",
     "        \"Disable GUI (over-ridden; called by IPython)\"\n",
