fix: `CaptureShell.shell` sets `cell.outputs` to ordinary dicts instead of `AttrDict`s

--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -49,6 +49,7 @@
     "\n",
     "from execnb.fastshell import FastInteractiveShell\n",
     "from execnb.nbio import *\n",
+    "from execnb.nbio import _dict2obj\n",
     "\n",
     "from collections.abc import Callable"
    ]
@@ -441,7 +442,7 @@
     "    self._cell_idx = cell.idx_ + 1\n",
     "    outs = self.run(cell.source)\n",
     "    if outs:\n",
-    "        cell.outputs = outs\n",
+    "        cell.outputs = _dict2obj(outs)\n",
     "        for o in outs:\n",
     "            if 'execution_count' in o: cell['execution_count'] = o['execution_count']"
    ]
