--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -148,15 +148,15 @@
     "        self.out,self.count = [],1\n",
     "        self.exc = self.result = self._fname = self._cell_idx = self._stdout = self._stderr = None\n",
     "        if IN_NOTEBOOK:\n",
-    "            try: self.enable_matplotlib()\n",
+    "            try: self.enable_matplotlib('inline')\n",
     "            except ModuleNotFoundError: pass\n",
     "        if path: self.set_path(path)\n",
     "\n",
-    "    def enable_matplotlib(self):\n",
+    "    def enable_matplotlib(self, gui=None):\n",
     "        \"Enable `matplotlib` in a nested shell\"\n",
     "        from matplotlib_inline.backend_inline import configure_inline_support\n",
     "        configure_inline_support.current_backend = 'unset'\n",
-    "        return super().enable_matplotlib('inline')\n",
+    "        return super().enable_matplotlib(gui)\n",
     "    \n",
     "    def set_path(self, path):\n",
     "        \"Add `path` to python path, or `path.parent` if it's a file\"\n",
