--- a/nbs/01_nbio.ipynb
+++ b/nbs/01_nbio.ipynb
@@ -525,7 +525,7 @@
     "    \"Write `nb` to `path`\"\n",
     "    new = nb2str(nb)\n",
     "    path = Path(path)\n",
-    "    old = Path(path).read_text() if path.exists() else None\n",
+    "    old = Path(path).read_text(encoding='utf-8') if path.exists() else None\n",
     "    if new!=old:\n",
     "        with open(path, 'w', encoding='utf-8') as f: f.write(new)"
    ]
