add two new keys to a cell

--- a/nbs/01_nbio.ipynb
+++ b/nbs/01_nbio.ipynb
@@ -171,7 +171,7 @@
     "\n",
     "    def parsed_(self):\n",
     "        if self.cell_type!='code' or self.source.strip()[:1] in ['%', '!']: return\n",
-    "        if '_parsed_' not in self: \n",
+    "        if '_parsed_' not in self:\n",
     "            try: self._parsed_ = ast.parse(self.source).body\n",
     "            # you can assign the result of ! to a variable in a notebook cell\n",
     "            # which will result in a syntax error if parsed with the ast module.\n",
@@ -394,6 +394,9 @@
     "    \"Create an `NbCell` containing `text`\"\n",
     "    assert cell_type in {'code', 'markdown', 'raw'}\n",
     "    if 'metadata' not in kwargs: kwargs['metadata']={}\n",
+    "    if cell_type == 'code':\n",
+    "        kwargs['outputs']=[]\n",
+    "        kwargs['execution_count']=0\n",
     "    return NbCell(0, dict(cell_type=cell_type, source=text, directives_={}, **kwargs))"
    ]
   },
