--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -31,7 +31,7 @@
     "from fastcore.utils import *\n",
     "from fastcore.script import call_parse\n",
     "\n",
-    "import multiprocessing\n",
+    "import multiprocessing,types\n",
     "try:\n",
     "    if sys.platform == 'darwin': multiprocessing.set_start_method(\"fork\")\n",
     "except RuntimeError: pass # if re-running cell\n",
@@ -39,6 +39,10 @@
     "from IPython.core.interactiveshell import InteractiveShell, ExecutionInfo, ExecutionResult\n",
     "from IPython.core.displayhook import DisplayHook\n",
     "from IPython.utils.capture import capture_output\n",
+    "from IPython.core.completer import IPCompleter,provisionalcompleter\n",
+    "from IPython.core.hooks import CommandChainDispatcher\n",
+    "from IPython.core.completerlib import module_completer\n",
+    "from IPython.utils.strdispatch import StrDispatch\n",
     "from IPython.display import display as disp, HTML\n",
     "\n",
     "import traceback\n",
@@ -67,6 +71,61 @@
    "metadata": {},
    "source": [
     "## CaptureShell -"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SmartCompleter(IPCompleter):\n",
+    "    def __init__(self, shell, namespace=None):\n",
+    "        if namespace is None: namespace = shell.user_ns\n",
+    "        super().__init__(shell, namespace)\n",
+    "        self.use_jedi = False\n",
+    "\n",
+    "        sdisp = StrDispatch()\n",
+    "        self.custom_completers = sdisp\n",
+    "        import_disp = CommandChainDispatcher()\n",
+    "        import_disp.add(types.MethodType(module_completer, shell))\n",
+    "        sdisp.add_s('import', import_disp)\n",
+    "        sdisp.add_s('from', import_disp)\n",
+    "\n",
+    "    def __call__(self, c):\n",
+    "        if not c: return []\n",
+    "        with provisionalcompleter():\n",
+    "            return [o.text.rpartition('.')[-1]\n",
+    "                    for o in self.completions(c, len(c))\n",
+    "                    if o.type=='<unknown>']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cc = SmartCompleter(get_ipython())\n",
+    "\n",
+    "def test_set(a,b): return test_eq(set(a), set(b))\n",
+    "\n",
+    "class _f:\n",
+    "    def __init__(self): self.bar,self.baz,self.room = 0,0,0\n",
+    "\n",
+    "foo = _f()\n",
+    "\n",
+    "test_set(cc(\"b\"), ['bin', 'bool', 'break', 'breakpoint', 'bytearray', 'bytes'])\n",
+    "test_set(cc(\"foo.b\"), ['bar', 'baz'])\n",
+    "test_set(cc(\"x=1; x = foo.b\"), ['bar', 'baz'])\n",
+    "test_set(cc(\"ab\"), ['abs'])\n",
+    "test_set(cc(\"b = ab\"), ['abs'])\n",
+    "test_set(cc(\"\"), [])\n",
+    "test_set(cc(\"foo.\"), ['bar', 'baz', 'room'])\n",
+    "test_set(cc(\"nonexistent.b\"), [])\n",
+    "test_set(cc(\"foo.nonexistent.b\"), [])\n",
+    "test_set(cc(\"import ab\"), ['abc'])\n",
+    "test_set(cc(\"from abc import AB\"), ['ABC', 'ABCMeta'])"
    ]
   },
   {
@@ -1633,6 +1692,69 @@
    "metadata": {},
    "source": [
     "This is the command-line version of `CaptureShell.execute`. Run `exec_nb -h` from the command line to see how to pass arguments. If you don't pass `dest` then the output notebook won't be saved; this is mainly useful for running tests."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Completions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "class SmartCompleter(IPCompleter):\n",
+    "    def __init__(self, shell, namespace=None):\n",
+    "        if namespace is None: namespace = shell.user_ns\n",
+    "        super().__init__(shell, namespace)\n",
+    "        self.use_jedi = False\n",
+    "\n",
+    "        sdisp = StrDispatch()\n",
+    "        self.custom_completers = sdisp\n",
+    "        import_disp = CommandChainDispatcher()\n",
+    "        import_disp.add(types.MethodType(module_completer, shell))\n",
+    "        sdisp.add_s('import', import_disp)\n",
+    "        sdisp.add_s('from', import_disp)\n",
+    "\n",
+    "    def __call__(self, c):\n",
+    "        if not c: return []\n",
+    "        with provisionalcompleter():\n",
+    "            return [o.text.rpartition('.')[-1]\n",
+    "                    for o in self.completions(c, len(c))\n",
+    "                    if o.type=='<unknown>']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cc = SmartCompleter(get_ipython())\n",
+    "\n",
+    "def test_set(a,b): return test_eq(set(a), set(b))\n",
+    "\n",
+    "class _f:\n",
+    "    def __init__(self): self.bar,self.baz,self.room = 0,0,0\n",
+    "\n",
+    "foo = _f()\n",
+    "\n",
+    "assert set(cc(\"b\")).issuperset(['bin', 'bool', 'break', 'breakpoint', 'bytearray', 'bytes'])\n",
+    "test_set(cc(\"foo.b\"), ['bar', 'baz'])\n",
+    "test_set(cc(\"x=1; x = foo.b\"), ['bar', 'baz'])\n",
+    "test_set(cc(\"ab\"), ['abs'])\n",
+    "test_set(cc(\"b = ab\"), ['abs'])\n",
+    "test_set(cc(\"\"), [])\n",
+    "test_set(cc(\"foo.\"), ['bar', 'baz', 'room'])\n",
+    "test_set(cc(\"nonexistent.b\"), [])\n",
+    "test_set(cc(\"foo.nonexistent.b\"), [])\n",
+    "test_set(cc(\"import ab\"), ['abc'])\n",
+    "test_set(cc(\"from abc import AB\"), ['ABC', 'ABCMeta'])"
    ]
   },
   {
