--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -79,61 +79,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class SmartCompleter(IPCompleter):\n",
-    "    def __init__(self, shell, namespace=None):\n",
-    "        if namespace is None: namespace = shell.user_ns\n",
-    "        super().__init__(shell, namespace)\n",
-    "        self.use_jedi = False\n",
-    "\n",
-    "        sdisp = StrDispatch()\n",
-    "        self.custom_completers = sdisp\n",
-    "        import_disp = CommandChainDispatcher()\n",
-    "        import_disp.add(types.MethodType(module_completer, shell))\n",
-    "        sdisp.add_s('import', import_disp)\n",
-    "        sdisp.add_s('from', import_disp)\n",
-    "\n",
-    "    def __call__(self, c):\n",
-    "        if not c: return []\n",
-    "        with provisionalcompleter():\n",
-    "            return [o.text.rpartition('.')[-1]\n",
-    "                    for o in self.completions(c, len(c))\n",
-    "                    if o.type=='<unknown>']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cc = SmartCompleter(get_ipython())\n",
-    "\n",
-    "def test_set(a,b): return test_eq(set(a), set(b))\n",
-    "\n",
-    "class _f:\n",
-    "    def __init__(self): self.bar,self.baz,self.room = 0,0,0\n",
-    "\n",
-    "foo = _f()\n",
-    "\n",
-    "test_set(cc(\"b\"), ['bin', 'bool', 'break', 'breakpoint', 'bytearray', 'bytes'])\n",
-    "test_set(cc(\"foo.b\"), ['bar', 'baz'])\n",
-    "test_set(cc(\"x=1; x = foo.b\"), ['bar', 'baz'])\n",
-    "test_set(cc(\"ab\"), ['abs'])\n",
-    "test_set(cc(\"b = ab\"), ['abs'])\n",
-    "test_set(cc(\"\"), [])\n",
-    "test_set(cc(\"foo.\"), ['bar', 'baz', 'room'])\n",
-    "test_set(cc(\"nonexistent.b\"), [])\n",
-    "test_set(cc(\"foo.nonexistent.b\"), [])\n",
-    "test_set(cc(\"import ab\"), ['abc'])\n",
-    "test_set(cc(\"from abc import AB\"), ['ABC', 'ABCMeta'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#|export\n",
     "class _CustDisplayHook(DisplayHook):\n",
     "    def write_output_prompt(self): pass\n",
@@ -157,14 +102,13 @@
     "class CaptureShell(InteractiveShell):\n",
     "    displayhook_class = _CustDisplayHook\n",
     "\n",
-    "    def __init__(self,\n",
-    "                 path:str|Path=None): # Add `path` to python path\n",
-    "        \"Execute the IPython/Jupyter source code\"\n",
+    "    def __init__(self, path:str|Path=None):\n",
     "        super().__init__()\n",
     "        self.result,self.exc = None,None\n",
     "        if path: self.set_path(path)\n",
-    "        self.display_formatter.active = False\n",
-    "        self.run_cell('%matplotlib inline')  # Enable inline plotting\n",
+    "        self.display_formatter.active = True\n",
+    "        if not IN_NOTEBOOK: InteractiveShell._instance = self\n",
+    "        self.run_cell('%matplotlib inline')\n",
     "\n",
     "    def run_cell(self, raw_cell, store_history=False, silent=False, shell_futures=True, cell_id=None,\n",
     "                 stdout=True, stderr=True, display=True):\n",
@@ -646,12 +590,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
+    "def format_exc(e):\n",
+    "    \"Format exception `e` as a string\"\n",
+    "    return ''.join(traceback.format_exception(type(e), e, e.__traceback__))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#|export\n",
     "def _out_stream(text, name): return dict(name=name, output_type='stream', text=text.splitlines(True))\n",
     "def _out_exc(e):\n",
     "    ename = type(e).__name__\n",
     "    tb = traceback.extract_tb(e.__traceback__)#.format()\n",
-    "    return dict(ename=str(ename), evalue=str(e), output_type='error', traceback=tb)\n",
+    "    return dict(ename=str(ename), evalue=str(e), output_type='error', traceback=format_exc(e))\n",
     "\n",
     "def _format_mimedata(k, v):\n",
     "    \"Format mime-type keyed data consistently with Jupyter\"\n",
@@ -743,7 +699,7 @@
        "[{'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
        "  'text': ['CPU times: user 1 us, sys: 0 ns, total: 1 us\\n',\n",
-       "   'Wall time: 3.1 us\\n']},\n",
+       "   'Wall time: 2.86 us\\n']},\n",
        " {'data': {'text/plain': ['2']},\n",
        "  'metadata': {},\n",
        "  'output_type': 'execute_result'}]"
@@ -870,8 +826,7 @@
        " {'ename': 'Exception',\n",
        "  'evalue': 'Oops',\n",
        "  'output_type': 'error',\n",
-       "  'traceback': [<FrameSummary file /Users/jhoward/miniconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py, line 3553 in run_code>,\n",
-       "   <FrameSummary file <ipython-input-1-01648acb07bd>, line 1 in <module>>]}]"
+       "  'traceback': 'Traceback (most recent call last):\\n  File \"/Users/jhoward/miniconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3553, in run_code\\n    exec(code_obj, self.user_global_ns, self.user_ns)\\n  File \"<ipython-input-1-01648acb07bd>\", line 1, in <module>\\n    raise Exception(\"Oops\")\\nException: Oops\\n'}]"
       ]
      },
      "execution_count": null,
@@ -1249,8 +1204,7 @@
        " {'ename': 'Exception',\n",
        "  'evalue': 'Oopsie!',\n",
        "  'output_type': 'error',\n",
-       "  'traceback': [<FrameSummary file /Users/jhoward/miniconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py, line 3553 in run_code>,\n",
-       "   <FrameSummary file <ipython-input-1-1c97c1d317ab>, line 1 in <module>>]}]"
+       "  'traceback': 'Traceback (most recent call last):\\n  File \"/Users/jhoward/miniconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3553, in run_code\\n    exec(code_obj, self.user_global_ns, self.user_ns)\\n  File \"<ipython-input-1-1c97c1d317ab>\", line 1, in <module>\\n    raise Exception(\"Oopsie!\")\\nException: Oopsie!\\n'}]"
       ]
      },
      "execution_count": null,
@@ -1278,7 +1232,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "got exception: 'Exception' object is not subscriptable\n"
+      "got exception: Oopsie!\n"
      ]
     }
    ],
@@ -1400,7 +1354,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']}, {'data': {'text/plain': ['2']}, 'metadata': {}, 'output_type': 'execute_result'}]\n"
+     ]
+    }
+   ],
    "source": [
     "s = CaptureShell()\n",
     "try:\n",
@@ -1433,7 +1395,7 @@
     "    fname = fname if fname else self._fname\n",
     "    _fence = '='*75\n",
     "    cell_intro_str = f\"While Executing Cell #{self._cell_idx}:\" if self._cell_idx else \"While Executing:\"\n",
-    "    cell_str = f\"\\n{cell_intro_str}\\n{self.exc}\"\n",
+    "    cell_str = f\"\\n{cell_intro_str}\\n{format_exc(self.exc)}\"\n",
     "    fname_str = f' in {fname}' if fname else ''\n",
     "    return f\"{type(self.exc).__name__}{fname_str}:\\n{_fence}\\n{cell_str}\\n\""
    ]
@@ -1449,7 +1411,36 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AssertionError in ../tests/error.ipynb:\n",
+      "===========================================================================\n",
+      "\n",
+      "While Executing Cell #2:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/var/folders/ss/34z569j921v58v8n1n_8z7h40000gn/T/ipykernel_85617/1421292703.py\", line 3, in <module>\n",
+      "    s.execute('../tests/error.ipynb', exc_stop=True)\n",
+      "  File \"/var/folders/ss/34z569j921v58v8n1n_8z7h40000gn/T/ipykernel_85617/2032771714.py\", line 18, in execute\n",
+      "    self.run_all(nb, exc_stop=exc_stop, preproc=preproc, postproc=postproc,\n",
+      "  File \"/var/folders/ss/34z569j921v58v8n1n_8z7h40000gn/T/ipykernel_85617/1738204067.py\", line 19, in run_all\n",
+      "    if self.exc and exc_stop: raise self.exc from None\n",
+      "                              ^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/jhoward/miniconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3553, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"<ipython-input-1-b968a57a586e>\", line 3, in <module>\n",
+      "    foo()\n",
+      "  File \"/Users/jhoward/Documents/GitHub/execnb/tests/err.py\", line 2, in foo\n",
+      "    assert 13 == 98\n",
+      "           ^^^^^^^^\n",
+      "AssertionError\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "s = CaptureShell()\n",
     "try:\n",
@@ -1698,7 +1689,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Completions"
+    "## Completions -"
    ]
   },
   {
@@ -1709,11 +1700,10 @@
    "source": [
     "#| export\n",
     "class SmartCompleter(IPCompleter):\n",
-    "    def __init__(self, shell, namespace=None):\n",
+    "    def __init__(self, shell, namespace=None, jedi=False):\n",
     "        if namespace is None: namespace = shell.user_ns\n",
     "        super().__init__(shell, namespace)\n",
-    "        self.use_jedi = False\n",
-    "\n",
+    "        self.use_jedi = jedi\n",
     "        sdisp = StrDispatch()\n",
     "        self.custom_completers = sdisp\n",
     "        import_disp = CommandChainDispatcher()\n",
