--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -706,7 +706,7 @@
       "text/plain": [
        "[{'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
-       "  'text': ['CPU times: user 1 us, sys: 1 us, total: 2 us\\n',\n",
+       "  'text': ['CPU times: user 1e+03 ns, sys: 1e+03 ns, total: 2 us\\n',\n",
        "   'Wall time: 3.1 us\\n']},\n",
        " {'data': {'text/plain': ['2']},\n",
        "  'metadata': {},\n",
@@ -762,7 +762,7 @@
     {
      "data": {
       "text/html": [
-       "<pre>CPU times: user 1 us, sys: 1 us, total: 2 us\n",
+       "<pre>CPU times: user 1e+03 ns, sys: 1e+03 ns, total: 2 us\n",
        "Wall time: 3.1 us\n",
        "</pre>\n",
        "<pre>2</pre>"
@@ -1802,7 +1802,7 @@
     "\n",
     "foo = _f()\n",
     "\n",
-    "assert set(cc(\"b\")).issuperset(['bin', 'bool', 'break', 'breakpoint', 'bytearray', 'bytes'])\n",
+    "assert set(cc(\"b\")).issuperset(['bool', 'bytes'])\n",
     "test_set(cc(\"foo.b\"), ['bar', 'baz'])\n",
     "test_set(cc(\"x=1; x = foo.b\"), ['bar', 'baz'])\n",
     "test_set(cc(\"ab\"), ['abs'])\n",
