--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -39,6 +39,7 @@
     "from IPython.core.interactiveshell import InteractiveShell, ExecutionInfo, ExecutionResult\n",
     "from IPython.core.displayhook import DisplayHook\n",
     "from IPython.utils.capture import capture_output\n",
+    "from IPython.utils.text import strip_ansi\n",
     "from IPython.core.completer import IPCompleter,provisionalcompleter\n",
     "from IPython.core.hooks import CommandChainDispatcher\n",
     "from IPython.core.completerlib import module_completer\n",
@@ -706,8 +707,8 @@
       "text/plain": [
        "[{'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
-       "  'text': ['CPU times: user 1e+03 ns, sys: 1e+03 ns, total: 2 us\\n',\n",
-       "   'Wall time: 3.1 us\\n']},\n",
+       "  'text': ['CPU times: user 2 us, sys: 0 ns, total: 2 us\\n',\n",
+       "   'Wall time: 3.81 us\\n']},\n",
        " {'data': {'text/plain': ['2']},\n",
        "  'metadata': {},\n",
        "  'output_type': 'execute_result'}]"
@@ -727,6 +728,38 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'stdout',\n",
+       "  'output_type': 'stream',\n",
+       "  'text': ['\\x1b[0;31m---------------------------------------------------------------------------\\x1b[0m\\n',\n",
+       "   '\\x1b[0;31mZeroDivisionError\\x1b[0m                         Traceback (most recent call last)\\n',\n",
+       "   'File \\x1b[0;32m<ipython-input-1-9e1622b385b6>:1\\x1b[0m\\n',\n",
+       "   '\\x1b[0;32m----> 1\\x1b[0m \\x1b[38;5;241m1\\x1b[39m\\x1b[38;5;241m/\\x1b[39m\\x1b[38;5;241m0\\x1b[39m\\n',\n",
+       "   '\\n',\n",
+       "   '\\x1b[0;31mZeroDivisionError\\x1b[0m: division by zero\\n']},\n",
+       " {'ename': 'ZeroDivisionError',\n",
+       "  'evalue': 'division by zero',\n",
+       "  'output_type': 'error',\n",
+       "  'traceback': 'Traceback (most recent call last):\\n  File \"/Users/jhoward/miniconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3553, in run_code\\n    exec(code_obj, self.user_global_ns, self.user_ns)\\n  File \"<ipython-input-1-9e1622b385b6>\", line 1, in <module>\\n    1/0\\n    ~^~\\nZeroDivisionError: division by zero\\n'}]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "o = s.run(\"1/0\")\n",
+    "o"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
@@ -734,7 +767,7 @@
     "    def render_output(out):\n",
     "        otype = out['output_type']\n",
     "        if otype == 'stream':\n",
-    "            txt = ''.join(out['text'])\n",
+    "            txt = strip_ansi(''.join(out['text']))\n",
     "            return f\"<pre>{txt}</pre>\" if out['name']=='stdout' else f\"<pre class='stderr'>{txt}</pre>\"\n",
     "        elif otype in ('display_data','execute_result'):\n",
     "            data = out['data']\n",
@@ -747,8 +780,6 @@
     "            if d := _g('image/png'): return f'<img src=\"data:image/png;base64,{d}\"/>'\n",
     "            if d := _g('text/latex'): return f'<div class=\"math\">${d}$</div>'\n",
     "            if d := _g('text/plain'): return f\"<pre>{escape(d)}</pre>\"\n",
-    "        elif otype == 'error':\n",
-    "            return f\"<pre class='error'>{out['ename']}: {out['evalue']}\\n{''.join(out['traceback'])}</pre>\"\n",
     "        return ''\n",
     "    \n",
     "    return '\\n'.join(map(render_output, outputs))"
@@ -762,10 +793,13 @@
     {
      "data": {
       "text/html": [
-       "<pre>CPU times: user 1e+03 ns, sys: 1e+03 ns, total: 2 us\n",
-       "Wall time: 3.1 us\n",
-       "</pre>\n",
-       "<pre>2</pre>"
+       "<pre>---------------------------------------------------------------------------\n",
+       "ZeroDivisionError                         Traceback (most recent call last)\n",
+       "File <ipython-input-1-9e1622b385b6>:1\n",
+       "----> 1 1/0\n",
+       "\n",
+       "ZeroDivisionError: division by zero\n",
+       "</pre>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
