Add option to use ansi2html renderer

--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -763,11 +763,11 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def render_outputs(outputs):\n",
+    "def render_outputs(outputs, ansi_renderer=strip_ansi):\n",
     "    def render_output(out):\n",
     "        otype = out['output_type']\n",
     "        if otype == 'stream':\n",
-    "            txt = strip_ansi(''.join(out['text']))\n",
+    "            txt = ansi_renderer(''.join(out['text']))\n",
     "            return f\"<pre>{txt}</pre>\" if out['name']=='stdout' else f\"<pre class='stderr'>{txt}</pre>\"\n",
     "        elif otype in ('display_data','execute_result'):\n",
     "            data = out['data']\n",
@@ -794,11 +794,11 @@
      "data": {
       "text/html": [
        "<pre>---------------------------------------------------------------------------\n",
-       "ZeroDivisionError                         Traceback (most recent call last)\n",
-       "File <ipython-input-1-9e1622b385b6>:1\n",
-       "----> 1 1/0\n",
+       "Exception                                 Traceback (most recent call last)\n",
+       "File <ipython-input-1-01648acb07bd>:1\n",
+       "----> 1 raise Exception(\"Oops\")\n",
        "\n",
-       "ZeroDivisionError: division by zero\n",
+       "Exception: Oops\n",
        "</pre>\n"
       ],
       "text/plain": [
@@ -812,6 +812,42 @@
    ],
    "source": [
     "HTML(render_outputs(o))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use `ansi2html` to convert from ANSI to HTML for color rendering.  You need some [css styles](https://github.com/fastai/fastcore/blob/master/examples/ansi.css) for the colors to render properly.  Jupyter already has these built in so it's not neccessary here, but if you plan on using this in another web app you will need to ensure that css styling is included."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre><span class=\"ansi-red-fg\">---------------------------------------------------------------------------</span>\n",
+       "<span class=\"ansi-red-fg\">Exception</span>                                 Traceback (most recent call last)\n",
+       "File <span class=\"ansi-green-fg\">&lt;ipython-input-1-01648acb07bd&gt;:1</span>\n",
+       "<span class=\"ansi-green-fg\">----&gt; 1</span> <span class=\"ansi-bold\" style=\"color: rgb(0,135,0)\">raise</span> <span class=\"ansi-bold\" style=\"color: rgb(215,95,95)\">Exception</span>(<span style=\"color: rgb(175,0,0)\">&#34;</span><span style=\"color: rgb(175,0,0)\">Oops</span><span style=\"color: rgb(175,0,0)\">&#34;</span>)\n",
+       "\n",
+       "<span class=\"ansi-red-fg\">Exception</span>: Oops\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HTML(render_outputs(o, ansi2html))"
    ]
   },
   {
