bug fix to add import

--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -30,6 +30,7 @@
     "\n",
     "from fastcore.utils import *\n",
     "from fastcore.script import call_parse\n",
+    "from fastcore.ansi import ansi2html\n",
     "\n",
     "import multiprocessing,types,traceback\n",
     "try:\n",
