Bug fix on completer

--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -1855,7 +1855,7 @@
     "        with provisionalcompleter():\n",
     "            return [o.text.rpartition('.')[-1]\n",
     "                    for o in self.completions(c, len(c))\n",
-    "                    if o.type=='<unknown>']"
+    "                    if o.type not in ('magic', 'path')]"
    ]
   },
   {
