Replace markdown with mistletoe for rendering markdown output

--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -32,7 +32,7 @@
     "from fastcore.script import call_parse\n",
     "from fastcore.ansi import ansi2html\n",
     "\n",
-    "import multiprocessing,types,traceback\n",
+    "import mistletoe,multiprocessing,types,traceback\n",
     "try:\n",
     "    if sys.platform == 'darwin': multiprocessing.set_start_method(\"fork\")\n",
     "except RuntimeError: pass # if re-running cell\n",
@@ -51,6 +51,7 @@
     "from html import escape\n",
     "try: from matplotlib_inline.backend_inline import set_matplotlib_formats\n",
     "except ImportError: set_matplotlib_formats = None\n",
+    "\n",
     "\n",
     "from execnb.nbio import *\n",
     "from execnb.nbio import _dict2obj"
@@ -775,7 +776,7 @@
     "            _g = lambda t: ''.join(data[t]) if t in data else None\n",
     "            if d := _g('text/html'): return d\n",
     "            if d := _g('application/javascript'): return f'<script>{d}</script>'\n",
-    "            if d := _g('text/markdown'): return markdown.markdown(d)\n",
+    "            if d := _g('text/markdown'): return mistletoe.markdown(d)\n",
     "            if d := _g('image/svg+xml'): return d\n",
     "            if d := _g('image/jpeg'): return f'<img src=\"data:image/jpeg;base64,{d}\"/>'\n",
     "            if d := _g('image/png'): return f'<img src=\"data:image/png;base64,{d}\"/>'\n",
