make mistletoe optional

--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -32,7 +32,7 @@
     "from fastcore.script import call_parse\n",
     "from fastcore.ansi import ansi2html\n",
     "\n",
-    "import mistletoe,multiprocessing,types,traceback,signal\n",
+    "import multiprocessing,types,traceback,signal\n",
     "try:\n",
     "    if sys.platform == 'darwin': multiprocessing.set_start_method(\"fork\")\n",
     "except RuntimeError: pass # if re-running cell\n",
@@ -817,6 +817,8 @@
    "source": [
     "#| export\n",
     "def render_outputs(outputs, ansi_renderer=strip_ansi):\n",
+    "    try: import mistletoe\n",
+    "    except ImportError: return print('mistletoe not found -- please install it')\n",
     "    def render_output(out):\n",
     "        otype = out['output_type']\n",
     "        if otype == 'stream':\n",
